Menambhakan link supaya interaktif pindah halaman

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
     <ol>
         <li><a href="profil.html">Profil</a></li>
-        <li>Data</li>
+         <li><a href="data.html">Profil</a></li>
         <li>Info</li>
         <li>Kontak</li>
     </ol>
