--- a/profil.html
+++ b/profil.html
@@ -12,7 +12,8 @@
     <h2><u>Biodata</u></h2>
     Nama: Mochamad Rafly Hidayat<br>
     NIK : 320355767<br>
-    Alamat : <i>Jl. Malayu depan pom bensin samarang</i>Garut<br>
+    Alamat : <i>Jl. Malayu depan pom bensin samarang</i> Garut<br>
     </p>
+    <b><a href ="index.html">klik di sini</a></b>
 </body>
 </html>
