Menambahkan gambar untuk memperjelas keadaan

--- a/artikel.html
+++ b/artikel.html
@@ -7,6 +7,9 @@
 </head>
 <body style="width: 70%; margin:0 auto">
     <h1 style="text-align:center;">Demonstrasi Berlanjut, PBB Soroti Kekerasan Aparat di Indonesia</h1>
+     <div style="text-align:center;">
+    <img src="gambar-demo.jpeg" alt="Demo di Indonesia" width="600">
+  </div>
     <ul type ="circle">
         <li><a href="#pendahuluan">pendahuluan</a></li>
         <li><a href="#Isi">Isi</a></li>
