--- a/artikel.html
+++ b/artikel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Berita Hari ini</title>
 </head>
 <body style="width: 70%; margin:0 auto">
     <h1 style="text-align:center;">Demonstrasi Berlanjut, PBB Soroti Kekerasan Aparat di Indonesia</h1>
